--- a/api/package.json
+++ b/api/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node --files ./dist/server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -19,6 +20,10 @@
     "@types/node": "^18.0.0",
     "@types/nodemon": "^1.19.1",
     "ts-node": "^10.8.1",
+    "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4"
-  }
+  },
+  "_moduleDirectories": [
+    "src"
+  ]
 }
