--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node --files ./dist/server.ts"
+    "dev": "nodemon --exec ts-node --files ./src/server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "module-alias": "^2.2.2",
     "nodemon": "^2.0.16"
   },
   "devDependencies": {
