--- a/api/package.json
+++ b/api/package.json
@@ -4,27 +4,51 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node --files ./src/server.ts"
+    "build": "cd src && tsc",
+    "start": "ts-node -r ./tsconfig-paths.js ./dist/server.js",
+    "dev": "nodemon --exec ts-node --files ./src/server.ts",
+    "pre-commit": "lint-staged",
+    "test": "jest",
+    "test:report": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "helmet": "^5.1.0",
+    "jest": "^28.1.1",
     "module-alias": "^2.2.2",
+    "mongoose": "^6.4.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.3",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.0",
     "@types/nodemon": "^1.19.1",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^8.18.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.2",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4"
   },
   "_moduleDirectories": [
     "src"
-  ]
+  ],
+  "lint-staged": {
+    "*": "prettier --write --ignore-unkown",
+    "*.ts": "eslint --fix"
+  }
 }
