--- a/api/package.json
+++ b/api/package.json
@@ -23,7 +23,9 @@
     "module-alias": "^2.2.2",
     "mongoose": "^6.4.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
@@ -33,6 +35,8 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.0",
     "@types/nodemon": "^1.19.1",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "^8.18.0",
