--- a/api/package.json
+++ b/api/package.json
@@ -25,7 +25,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.16",
     "swagger-jsdoc": "^6.2.1",
-    "swagger-ui-express": "^4.4.0"
+    "swagger-ui-express": "^4.4.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
@@ -37,6 +38,7 @@
     "@types/nodemon": "^1.19.1",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/validator": "^13.7.3",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "^8.18.0",
