--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
@@ -27,7 +28,9 @@
     "nodemon": "^2.0.16",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.8.0",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
