--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.33.0",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.1.5",
     "react-router-dom": "^6.3.0",
