--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.33.0",
@@ -16,7 +17,8 @@
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
-    "vite-tsconfig-paths": "^3.5.0"
+    "vite-tsconfig-paths": "^3.5.0",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
