--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,7 +20,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "*": ["./src/*", "node_modules"],
+      "*": ["./src/*", "./node_modules"],
       "./": ["./src/*"]
     }
   },
